Bug 56439 - gcc throws too many warnings with libfprint git master
Summary: gcc throws too many warnings with libfprint git master
Status: RESOLVED FIXED
Alias: None
Product: libfprint
Classification: Unclassified
Component: libfprint (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: libfprint-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-26 18:28 UTC by Vasily Khoruzhick
Modified: 2012-11-06 08:31 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
0001-AES1610-driver-cleanup.patch (7.10 KB, patch)
2012-10-26 18:29 UTC, Vasily Khoruzhick
Details | Splinter Review
0002-UPEKE2-driver-cleanup.patch (1.11 KB, patch)
2012-10-26 18:29 UTC, Vasily Khoruzhick
Details | Splinter Review
0003-UPEKSONLY-driver-cleanup.patch (1.67 KB, patch)
2012-10-26 18:30 UTC, Vasily Khoruzhick
Details | Splinter Review
0004-nbis-prefix-global-variables-with-g_.patch (15.88 KB, patch)
2012-10-26 18:31 UTC, Vasily Khoruzhick
Details | Splinter Review
0005-nbis-fix-rest-of-warnings-reported-by-gcc.patch (6.51 KB, patch)
2012-10-26 18:31 UTC, Vasily Khoruzhick
Details | Splinter Review
0006-lib-fix-warning-in-syn~ted-by-gcc-when-debug.patch (1.60 KB, patch)
2012-10-26 18:32 UTC, Vasily Khoruzhick
Details | Splinter Review
0001-AES1610-driver-cleanup-part-1.patch (1.35 KB, patch)
2012-11-05 19:48 UTC, Vasily Khoruzhick
Details | Splinter Review
0002-AES1610-driver-cleanup-part-2.patch (6.21 KB, patch)
2012-11-05 19:49 UTC, Vasily Khoruzhick
Details | Splinter Review

Description Vasily Khoruzhick 2012-10-26 18:28:37 UTC
gcc throws to many warnings with libfprint git master. It's good practice to keep code free of warnings.
Comment 1 Vasily Khoruzhick 2012-10-26 18:29:27 UTC
Created attachment 69126 [details] [review]
0001-AES1610-driver-cleanup.patch
Comment 2 Vasily Khoruzhick 2012-10-26 18:29:54 UTC
Created attachment 69127 [details] [review]
0002-UPEKE2-driver-cleanup.patch
Comment 3 Vasily Khoruzhick 2012-10-26 18:30:20 UTC
Created attachment 69128 [details] [review]
0003-UPEKSONLY-driver-cleanup.patch
Comment 4 Vasily Khoruzhick 2012-10-26 18:31:02 UTC
Created attachment 69129 [details] [review]
0004-nbis-prefix-global-variables-with-g_.patch
Comment 5 Vasily Khoruzhick 2012-10-26 18:31:31 UTC
Created attachment 69130 [details] [review]
0005-nbis-fix-rest-of-warnings-reported-by-gcc.patch
Comment 6 Vasily Khoruzhick 2012-10-26 18:32:32 UTC
Created attachment 69131 [details] [review]
0006-lib-fix-warning-in-syn~ted-by-gcc-when-debug.patch
Comment 7 Vasily Khoruzhick 2012-11-03 13:16:11 UTC
Bastien, ping?
Comment 8 Bastien Nocera 2012-11-05 17:52:12 UTC
Comment on attachment 69126 [details] [review]
0001-AES1610-driver-cleanup.patch

Review of attachment 69126 [details] [review]:
-----------------------------------------------------------------

Can you split the code removal, and the warning fixes please?
Comment 9 Bastien Nocera 2012-11-05 17:53:23 UTC
Comment on attachment 69127 [details] [review]
0002-UPEKE2-driver-cleanup.patch

Review of attachment 69127 [details] [review]:
-----------------------------------------------------------------

Looks good.
Comment 10 Bastien Nocera 2012-11-05 17:53:47 UTC
Comment on attachment 69128 [details] [review]
0003-UPEKSONLY-driver-cleanup.patch

Review of attachment 69128 [details] [review]:
-----------------------------------------------------------------

Looks good.
Comment 11 Bastien Nocera 2012-11-05 18:12:31 UTC
Comment on attachment 69129 [details] [review]
0004-nbis-prefix-global-variables-with-g_.patch

Review of attachment 69129 [details] [review]:
-----------------------------------------------------------------

This sounds like it would make NBIS harder to update.
I'd love to get this code copy/pastable from the upstream (that I don't know where it lives).
Comment 12 Vasily Khoruzhick 2012-11-05 18:20:13 UTC
(In reply to comment #8)
> Comment on attachment 69126 [details] [review] [review]
> 0001-AES1610-driver-cleanup.patch
> 
> Review of attachment 69126 [details] [review] [review]:
> -----------------------------------------------------------------
> 
> Can you split the code removal, and the warning fixes please?

Sure
Comment 13 Bastien Nocera 2012-11-05 18:21:34 UTC
Comment on attachment 69130 [details] [review]
0005-nbis-fix-rest-of-warnings-reported-by-gcc.patch

Review of attachment 69130 [details] [review]:
-----------------------------------------------------------------

Do we have an upstream for those?
Comment 14 Bastien Nocera 2012-11-05 18:21:51 UTC
Comment on attachment 69131 [details] [review]
0006-lib-fix-warning-in-syn~ted-by-gcc-when-debug.patch

Review of attachment 69131 [details] [review]:
-----------------------------------------------------------------

Looks good.
Comment 15 Vasily Khoruzhick 2012-11-05 18:24:11 UTC
(In reply to comment #11)
> Comment on attachment 69129 [details] [review] [review]
> 0004-nbis-prefix-global-variables-with-g_.patch
> 
> Review of attachment 69129 [details] [review] [review]:
> -----------------------------------------------------------------
> 
> This sounds like it would make NBIS harder to update.
> I'd love to get this code copy/pastable from the upstream (that I don't know
> where it lives).

Daniel Drake already did some cleanup and rework (see git log libfprint/nbis) Anyway I'm not sure if this code gets any updates at all.
Comment 16 Vasily Khoruzhick 2012-11-05 19:48:23 UTC
Created attachment 69582 [details] [review]
0001-AES1610-driver-cleanup-part-1.patch
Comment 17 Vasily Khoruzhick 2012-11-05 19:49:23 UTC
Created attachment 69583 [details] [review]
0002-AES1610-driver-cleanup-part-2.patch
Comment 18 Bastien Nocera 2012-11-06 08:25:24 UTC
Comment on attachment 69582 [details] [review]
0001-AES1610-driver-cleanup-part-1.patch

Review of attachment 69582 [details] [review]:
-----------------------------------------------------------------

Looks good.
Comment 19 Bastien Nocera 2012-11-06 08:25:58 UTC
Comment on attachment 69583 [details] [review]
0002-AES1610-driver-cleanup-part-2.patch

Review of attachment 69583 [details] [review]:
-----------------------------------------------------------------

++
Comment 20 Bastien Nocera 2012-11-06 08:31:21 UTC
commit 6b84c6664fe9da98e013caab99145d8f0279b9bb
Author: Vasily Khoruzhick <anarsoul@gmail.com>
Date:   Mon Nov 5 22:39:49 2012 +0300

    AES1610: driver cleanup, part #2
    
    Remove dead code
    
    https://bugs.freedesktop.org/show_bug.cgi?id=56439

commit f569d0bf4479c4d6ebf1972b59cd7450ec9a3258
Author: Vasily Khoruzhick <anarsoul@gmail.com>
Date:   Sat Oct 20 12:26:38 2012 +0300

    AES1610: driver cleanup, part #1
    
    Fix warnings reported by gcc
    
    https://bugs.freedesktop.org/show_bug.cgi?id=56439

commit 1cfd14b7fe8f9e68c5bd74461bcd17e25b9f1d15
Author: Vasily Khoruzhick <anarsoul@gmail.com>
Date:   Fri Oct 26 16:40:53 2012 +0300

    nbis: fix rest of warnings reported by gcc
    
    https://bugs.freedesktop.org/show_bug.cgi?id=56439

commit 5d32102efefe955e9f5bdbf5809a5fb637d77e89
Author: Vasily Khoruzhick <anarsoul@gmail.com>
Date:   Fri Oct 26 16:36:21 2012 +0300

    nbis: prefix global variables with "g_"
    
    It fixes a lot of warnings about shadowing global variable
    
    https://bugs.freedesktop.org/show_bug.cgi?id=56439


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.