AES1610: driver cleanup, part #1

Fix warnings reported by gcc

https://bugs.freedesktop.org/show_bug.cgi?id=56439